--- a/src/Components/Mentee/MenteeDashboard/OtherComponents/MenteeDashboardProfile.css
+++ b/src/Components/Mentee/MenteeDashboard/OtherComponents/MenteeDashboardProfile.css
@@ -11,6 +11,7 @@ body {
   gap: 2rem;
   align-items: flex-start;
 }
+
 .dashboard-container {
   width: 100%;
 }
@@ -36,8 +37,8 @@ body {
 }
 
 .profile-image-container {
-  /* width: 180px;
-  height: 180px; */
+  cursor: pointer;
+  position: relative;
   border-radius: 12px;
   overflow: hidden;
   border: 4px solid #fff;
@@ -49,7 +50,32 @@ body {
   width: 200px;
   height: 200px;
   object-fit: cover;
+  transition: opacity 0.3s ease-in-out;
 }
+
+.profile-image-container:hover .update-text {
+  opacity: 1;
+}
+
+.profile-image-container:hover .profile-imageDashBoard {
+  opacity: 0.6;
+}
+
+.update-text {
+  position: absolute;
+  width: 7rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.6);
+  color: white;
+  padding: 8px 12px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3sease-in-out;
+  font-size: 14px;
+}
+
 .mentee-dashboardHeadline {
   flex: 3;
 }
@@ -580,6 +606,7 @@ body {
     opacity: 0;
     transform: translateY(10px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -666,6 +693,7 @@ body {
     opacity: 0;
     transform: translateY(10px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
