--- a/src/Components/Employer/Internships/InternshipCss/InternshipProfile.css
+++ b/src/Components/Employer/Internships/InternshipCss/InternshipProfile.css
@@ -132,7 +132,7 @@
   color: #1976d2;
 }
 
-.internship_profile_supervision_label_text.unsupervised {
+.internship_profile_supervision_label_text.self {
   background-color: #fff3e0;
   color: #f57c00;
 }
