--- a/src/Components/Employer/Internships/InternshipCss/InternshipListing.css
+++ b/src/Components/Employer/Internships/InternshipCss/InternshipListing.css
@@ -98,6 +98,31 @@
   font-size: 14px;
 }
 
+.intern-supervision-type-badges {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.intern-supervision-type-badge {
+  padding: 5px 10px;
+  border-radius: 20px;
+  cursor: pointer;
+  background-color: #ffffff;
+  color: #333;
+  border: 1px solid #0255ca;
+  transition: background-color 0.3s, color 0.3s;
+}
+.intern-supervision-type-badge:hover {
+  background-color: #0255ca;
+  color: #fff;
+}
+
+.intern-supervision-type-badge.selected {
+  background-color: #0255ca;
+  color: #fff;
+}
+
 .intern-rate-inputs {
   display: flex;
   gap: 8px;
