Update styling for internship form and enhance toast notifications in various components and Emplyer profile setting update

--- a/src/Components/Employer/Internships/InternshipCss/Postinternship.css
+++ b/src/Components/Employer/Internships/InternshipCss/Postinternship.css
@@ -187,3 +187,6 @@
   margin-top: 4px;
   display: block;
 }
+.Inernship_form .react-tel-input .form-control {
+  background-color: #e9ecef !important;
+}
