--- a/src/Components/Mentor/MentorDashboard/DashboardCSS/Mentor.css
+++ b/src/Components/Mentor/MentorDashboard/DashboardCSS/Mentor.css
@@ -1639,6 +1639,7 @@ caption {
   }
   .MentorProfile-mentor-name {
     color: #063880;
+    font-size: 2rem;
   }
   .MentorProfile-mentor-company {
     color: #063880;
