--- a/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleClassdetails.css
+++ b/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/SingleClassdetails.css
@@ -11,17 +11,12 @@
   --hover-bg: #f1f5fe;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 
-body {
+
+/* body {
   background-color: var(--background-light);
   color: var(--text-primary);
-}
+} */
 
 
 
