--- a/src/Components/Forms/Login/login.css
+++ b/src/Components/Forms/Login/login.css
@@ -11,7 +11,36 @@
   background-position: "center";
 }
 
+.user-role-help-tooltip-wrapper {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
 
+.user-role-help-tooltip-text {
+  visibility: hidden;
+  background-color: #818181;
+  color: #fff;
+  text-align: center;
+  border-radius: 4px;
+  padding: 6px 8px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%; /* Adjust tooltip position */
+  left: 50%;
+  transform: translateX(-50%);
+  width: max-content;
+  max-width: 220px;
+  font-size: 12px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  white-space: normal;
+}
+
+.user-role-help-tooltip-wrapper:hover .user-role-help-tooltip-text {
+  visibility: visible;
+  opacity: 1;
+}
 
 .d-t:focus {
   box-shadow: none !important;
